# qibotn

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  setup.py
.github/: codecov.yml
.github/workflows/: deploy.yml  publish.yml  rules.yml
data/in/: backend.json  checkpoints.json  convergence_parameters.json  io_info.json
doc/source/: conf.py  index.rst
doc/source/code-examples/: index.rst  introductions.rst
doc/source/code-examples/tutorials/qmatchatea_intro/: qmatchatea_intro.ipynb
doc/source/getting-started/: quickstart.rst
docs/source/: Installation.rst  Quickstart.rst  conf.py  index.rst
docs/source/api-reference/: modules.rst
docs/source/getting-started/: index.rst  quickstart.rst
examples/qmatchatea_intro/: qibojit_errs.npy  qibojit_times.npy  qmatcha_errs.npy  qmatcha_times.npy  qmatchatea_introduction.ipynb
examples/quimb/: quimb_engine_tests.py
examples/quimb_intro/: benchmark_mpi_expectation.py  quimb_introduction.ipynb  test.py
src/qibotn/: MPSContractionHelper.py  MPSUtils.py  MpsHelper.py  QiboCircuitConvertor.py  QiboCircuitToMPS.py  __init__.py  __main__.py  backends.py  check_indep.py  circuit_convertor.py  circuit_to_mps.py  cutn.py  dbi.py  eval.py  eval_qu.py  experiment_with_logging.py  mps_contraction_helper.py  mps_utils.py  nonintegrated.py  qasm.py  qasm_quimb.py  qibo2quimb.ipynb  quimb.py  result.py  tebd.py  test_multinode.py  test_qasm_quimb_backend.py  usage.py  working_as_independent_fn.py
src/qibotn/backends/: #__init__.py#  .#__init__.py  __init__.py  abstract.py  cpu.py  cutensornet.py  gpu.py  qmatchatea.py  quimb.py
tests/: config.py  conftest.py  test_circuit_execution.py  test_circuit_execution_quimb.py  test_cuquantum_cutensor_backend.py  test_cuquantum_cutensor_mpi_backend.py  test_expectation.py  test_expectation_quimb.py  test_qasm_quimb_backend.py  test_quimb_backend.py  test_quimb_backend_tebd.py  test_quimb_mpi_backend.py
