[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qibotn"
version = "0.0.1"
description = ""
authors = ["Qibo Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
quimb = { version = "^1.6.0", extras = ["tensor"] }

[tool.poetry.group.dev.dependencies]
ipython = "^7.0.0"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pylint = "^3.0.3"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
cupy = "^11.6.0"
cuquantum-python-cu11 = "^23.3.0"

[tool.pylint.main]
ignored-modules = ["cupy", "cuquantum", "mpi4py"]

[tool.pylint.reports]
output-format = "colorized"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = ["--cov=qibotn", "--cov-report=xml"]
env = ["D:NUMBA_DISABLE_JIT=1"]
